force-app/main/default/objects/Meeting_Expense_Allocation__c/Meeting_Expense_Allocation__c.object-meta.xml
<CustomObject>
    <label>Meeting Expense Allocation</label>
    <nameField>
        <displayFormat>MEA-{00000}</displayFormat>
        <label>Meeting Expense Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Expense Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>