force-app/main/default/objects/Meeting_Expense_Allocation__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Meeting Expense Allocations</relationshipLabel>
    <relationshipName>Meeting_Expense_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>