force-app/main/default/objects/Meeting_Expense_Allocation__c/fields/Meeting_Expense__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Expense__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Meeting Expense</label>
    <referenceTo>Meeting_Expense__c</referenceTo>
    <relationshipLabel>Expense Allocations</relationshipLabel>
    <relationshipName>Expense_Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>