force-app/main/default/objects/Meeting_Expense_Allocation__c/fields/Meeting_Member__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Member</label>
    <referenceTo>Meeting_Member__c</referenceTo>
    <relationshipLabel>Expense Allocations</relationshipLabel>
    <relationshipName>Expense_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>